--- a/src/modules/tchat/directives/my-tchat/tchat.css
+++ b/src/modules/tchat/directives/my-tchat/tchat.css
@@ -1,42 +1,24 @@
-.chat {
-
-  list-style-type: none;
+.popup-box {
+  bottom: 0;
+  display: none;
+  height: 415px;
+  position: fixed;
+  right: 70px;
+  width: 300px;
 }
-.chat li {
-  list-style: none;
-}
-.panel-heading {
-  background-color:  #da12b7!important;
-}
-
-.panel {
-  border-color: #da12b7;
+.popup-box-on {
+  display: block !important;
 }
 
-.panel-body {
-  border-color: #da12b7;
+.popup-messages-footer {
+  background: #fcfcfc none repeat scroll 0 0;
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+  padding: 2px 5px 10px 6px;
 }
 
-.btn {
-  background-color: #da12b7!important;
-  color: white;
-  font-weight: 400;
-}
-
-.you {
-  background : #e8e8e8;
-  padding : 5px;
-  border : 2px solid white;
-  text-align: right;
-}
-
-.me {
-  background : #fcdbf6;
-  padding : 5px;
-  border : 2px solid white;
-}
-
-#messages {
-  height : 200px;
-  overflow-y : scroll;
+.popup-box2 {
+  height: 50px;
+  margin-bottom: 0.5em;
 }
