--- a/src/public/default.scss
+++ b/src/public/default.scss
@@ -1,1 +1,25 @@
 .ace_editor { height: 400px; width:500px; }
+.popup-box {
+  bottom: 0;
+  display: none;
+  height: 415px;
+  position: fixed;
+  right: 70px;
+  width: 300px;
+}
+.popup-box-on {
+  display: block !important;
+}
+
+.popup-messages-footer {
+  background: #fcfcfc none repeat scroll 0 0;
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+  padding: 2px 5px 5px 6px;
+}
+
+.popup-box2 {
+  height: 50px;
+  margin-bottom: 0.5em;
+}
